manifests/core-apps/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend

spec:
  replicas: 1   # Single instance (PoC)

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: hashicorp/http-echo:0.2.3   # Simple test server

          args:
            - "-text=Hello from backend"

          ports:
            - containerPort: 5678
