manifests/core-apps/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend

spec:
  type: ClusterIP

  selector:
    app: wrong-backend

  ports:
    - port: 80
      targetPort: 5678
